k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: gregseed/multi-server
          ports:
            - containerPort: 5000
          env: # for environment variables
            - name: REDIS_HOST
              value: redis-cluster-ip-service # named after the metadata/name of the service
            - name: REDIS_PORT
              value: '6379'
            - name: PGUSER
              value: postgres
            - name: PGHOST
              value: postgres-cluster-ip-service
            - name: PGPORT
              value: '5432'
            - name: PGDATABASE
              value: postgres
            - name: PGPASSWORD #configmap setting, don't want to place in plain text
              valueFrom:
                secretKeyRef:
                  name: pgpassword
                  key: PGPASSWORD
