k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional configuration options that put in higher level configuration around object that is created
    kubernetes.io/ingress.class: nginx # tell kubernetes want to create ingress controller based on nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # removes /api part, for example
spec:
  rules:
    - http:
        paths: # routing for different apis
          - path: /?(.*)
            backend: 
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
